fdo#43424: Comparing empty document with attached one crashes LO